--- a/history.html
+++ b/history.html
@@ -17,6 +17,11 @@
     #txt1{
       display:none;
     }
+    @media(min-width:600px){
+      p{
+        font-size: 100px;
+      }
+    }
   </style>
 </head>
 <body style="margin:0px">
