--- a/history.html
+++ b/history.html
@@ -17,10 +17,8 @@
     #txt1{
       display:none;
     }
-    @media(min-width:600px){
-      p{
-        font-size: 100px;
-      }
+    body{
+      background-color: lightgreen;
     }
   </style>
 </head>
