--- a/history.html
+++ b/history.html
@@ -22,7 +22,7 @@
 <body style="margin:0px">
   <div style="">
     <div style="text-align:center; position:relative; top:-70px; right:10px; font-family:'Times New Roman'">
-      <h1 style="color: grey"><img src="logo.png" style="height:100%; position:relative; top:50px">Sparkle<br><span style="font-size:10px; position:relative; left:40px; bottom:20px">Berkilau by GilarInc</span></h1>
+      <h1 style="color: grey"><img src="logo.png" style="height:200px; position:relative; top:50px">Sparkle<br><span style="font-size:10px; position:relative; left:40px; bottom:20px">Berkilau by GilarInc</span></h1>
     </div>
     <div style="border:3px solid; padding:10px; display:flex; justify-content:space-around; position:relative; bottom:80px; background-color:rgb(30,30,30)">
       <a href="index.html" style="text-decoration:none; color:white">Home</a>
