--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body style="margin:0px">
   <div style="">
-    <div style="text-align:center; position:relative; top:-70px; right:10px; font-family:"Times New Roman"">
+    <div style="text-align:center; position:relative; top:-70px; right:10px; font-size:100px;font-family:'Times New Roman'">
       <h1 style="color: grey"><img src="logo.png" style="height:100px; position:relative; top:50px">Sparkle<br><span style="font-size:10px; position:relative; left:40px; bottom:20px">Berkilau by GilarInc</span></h1>
     </div>
     <div style="border:3px solid; padding:10px; display:flex; justify-content:space-around; position:relative; bottom:80px; background-color:rgb(30,30,30)">
