--- a/history.html
+++ b/history.html
@@ -21,12 +21,12 @@
 </head>
 <body style="margin:0px">
   <div style="">
-    <div style="text-align:center; position:relative; top:-70px; right:10px; font-family:'Times New Roman'">
-      <h1 style="color: grey"><img src="logo.png" style="width:100px; position:relative; top:50px">Sparkle<br><span style="font-size:10px; position:relative; left:40px; bottom:20px">Berkilau by GilarInc</span></h1>
+    <div style="text-align:center; position:relative; bottom:150px; right:20px; font-size:50px; font-family:'Times New Roman'">
+      <h1 style="color: grey"><img src="logo.png" style="height:300px; position:relative; top:150px">Sparkle<br><span style="font-size:30px; position:relative; left:110px; bottom:60px">Berkilau by GilarInc</span></h1>
     </div>
-    <div style="border:3px solid; padding:10px; display:flex; justify-content:space-around; position:relative; bottom:80px; background-color:rgb(30,30,30)">
-      <a href="index.html" style="text-decoration:none; color:white">Home</a>
-      <a href="history.html" style="text-decoration:none; color:white; border-bottom:3px solid">History</a>
+    <div style="border:3px solid; padding:20px; display:flex; justify-content:space-around; position:relative; bottom:150px; background-color:rgb(30,30,30)">
+      <a href="index.html" style="text-decoration:none; color:white; border-bottom:3px solid; font-size:50px">Home</a>
+      <a href="history.html" style="text-decoration:none; color:white; font-size:50px">History</a>
     </div>
   </div>
   <div style="margin-left:20px; margin-right:20px; position:relative; bottom:90px">
