--- a/history.html
+++ b/history.html
@@ -14,6 +14,9 @@
       font-family: "Arial";
       color:grey;
     }
+    p{
+      font-size: 10px;
+    }
     #txt1{
       display:none;
     }
@@ -30,7 +33,7 @@
     </div>
   </div>
   <div style="margin-left:20px; margin-right:20px; position:relative; bottom:90px">
-    <p style="font-family:'Times New Roman'; font-size:30px; padding-top:10px">History</p>
+    <p style="font-family:'Times New Roman'; font-size:50px; padding-top:10px">History</p>
     <hr style="position:relative; bottom:20px">
     <p style="font-family:'Linux Libertine'">
       Semua berawal pada <span style="background-color:yellow">Selasa, 14 April 2020.</span> Pada pukul 13:00 <a href="https://id.m.wikipedia.org/wiki/Waktu_Indonesia_Barat"style="text-decoration:none; color:blue">Waktu Indonesia Barat</a>. Waktu itu adalah waktu dimana Saya masih menggunakan <a href="https://www.facebook.com" style="text-decoration:none; color:blue">Facebook</a> dan menjadi salah satu anggota grup meme. Pandemi terus berangsur- angsur semakin memburuk sejak awal kemunculannya yaitu pada tahun 2019. Penyeberan virus <a href="https://www-who-int.translate.goog/health-topics/coronavirus?_x_tr_sl=en&_x_tr_tl=id&_x_tr_hl=id&_x_tr_pto=tc" style="text-decoration:none; color:blue">COVID-19</a> yang dapat ditularkan dengan berbagai cara menyebabkan satu dunia dikarantina.
