--- a/history.html
+++ b/history.html
@@ -17,9 +17,6 @@
     p{
       font-size: 15px;
     }
-    img{
-      width: 90%;
-    }
     #txt1{
       display:none;
     }
@@ -41,7 +38,7 @@
     <p style="font-family:'Linux Libertine'">
       Semua berawal pada <span style="background-color:yellow">Selasa, 14 April 2020.</span> Pada pukul 13:00 <a href="https://id.m.wikipedia.org/wiki/Waktu_Indonesia_Barat"style="text-decoration:none; color:blue">Waktu Indonesia Barat</a>. Waktu itu adalah waktu dimana Saya masih menggunakan <a href="https://www.facebook.com" style="text-decoration:none; color:blue">Facebook</a> dan menjadi salah satu anggota grup meme. Pandemi terus berangsur- angsur semakin memburuk sejak awal kemunculannya yaitu pada tahun 2019. Penyeberan virus <a href="https://www-who-int.translate.goog/health-topics/coronavirus?_x_tr_sl=en&_x_tr_tl=id&_x_tr_hl=id&_x_tr_pto=tc" style="text-decoration:none; color:blue">COVID-19</a> yang dapat ditularkan dengan berbagai cara menyebabkan satu dunia dikarantina.
     </p>
-    <img src="virus.png" style="width:300px">
+    <img src="virus.png" style="width:90vw">
     <p style="font-size:10px; position:relative; bottom:10px; text-align: center"><i>COVID-19 MAP</i></p>
     <p style="font-family:'Linux Libertine'">
       Itu adalah keadaan yang sedang dialami dunia pada saat itu. Hal ini menyebabkan segala sesuatu dilakukan secara <a href="https://www.liputan6.com/hot/read/5059626/daring-adalah-singkatan-dari-dalam-jaringan-ketahui-pengertian-dan-jenisnya#:~:text=Artinya%20istilah%20daring%20merupakan%20segala,daring%20sangat%20populer%20dikalangan%20masyarakat." style="text-decoration:none; color:blue">Daring</a>. Saya menghabiskan waktu luang yang Saya miliki didalam <a href="https://www.facebook.com" style="text-decoration:none; color:blue">Facebook</a> untuk melihat- lihat meme disana dan Saya menemukan salah satu meme tentang animasi yang berasal dari negara <a href="https://id.m.wikipedia.org/wiki/Jepang" style="text-decoration:none; color:blue">Jepang</a> yang dikenal sebagai <a href="https://id.m.wikipedia.org/wiki/Anime" style="text-decoration:none; color:blue">Anime</a>.
