--- a/history.html
+++ b/history.html
@@ -48,12 +48,12 @@
       <p style="font-family:'Linux Libertine'">
         Ternyata judul dari <a href="https://id.m.wikipedia.org/wiki/Anime" style="text-decoration:none; color:blue">Anime</a> tersebut adalah <a href="https://id.m.wikipedia.org/wiki/Your_Name" style="text-decoration:none; color:blue; background-color:yellow">Your Name</a> (Jepang: 君の名は。; Romaji: Kimi no Na wa; harfiah: "Namamu."). Karena mulai tertarik, kemudian mencoba untuk menontonnya di <a href="https://www.youtube.com/" style="text-decoration:none; color:blue">Youtube</a>. Namun setelah setengah perjalanan durasi video, Ternyata Saya salah menonton <a href="https://id.m.wikipedia.org/wiki/Anime" style="text-decoration:none; color:blue">Anime</a>. Yang saat itu ditonton bukanlah <a href="https://id.m.wikipedia.org/wiki/Your_Name" style="text-decoration:none; color:blue; background-color:yellow">Your Name</a>, melainkan <a href="https://id.m.wikipedia.org/wiki/Anime" style="text-decoration:none; color:blue">Anime</a> lain yaitu <a href="https://youtu.be/Ma0NGrFui-M?si=Aj5Y-5dX3t4-lzSb" style="text-decoration:none; color:blue">5 Centimeters Per Second</a>.
       </p>
-      <img src="5cmpersec.jpeg" style="width:320px; margin-top:20px">
+      <img src="5cmpersec.jpeg" style="width:90%; margin-top:20px">
       <p style="font-size:10px; position:relative; bottom:10px; text-align:center"><i>5 Centimeters Per Second</i></p>
       <p style="font-family:'Linux Libertine'">
         Karena di <a href="https://www.youtube.com/" style="text-decoration:none; color:blue">Youtube</a> tidak ada, Saya mengunduhnya lewat <a href="https://www.google.com/" style="text-decoration:none; color:blue">Google</a> dan mendapatkannya.
       </p>
-      <img src="yourname.jpeg" style="width:320px; margin-top:20px">
+      <img src="yourname.jpeg" style="width:90%; margin-top:20px">
       <p style="font-size:10px; position:relative; bottom:10px; text-align:center"><i>Your Name</i></p>
       <hr>
   </div>
