--- a/history.html
+++ b/history.html
@@ -43,17 +43,17 @@
     <p style="font-family:'Linux Libertine'">
       Itu adalah keadaan yang sedang dialami dunia pada saat itu. Hal ini menyebabkan segala sesuatu dilakukan secara <a href="https://www.liputan6.com/hot/read/5059626/daring-adalah-singkatan-dari-dalam-jaringan-ketahui-pengertian-dan-jenisnya#:~:text=Artinya%20istilah%20daring%20merupakan%20segala,daring%20sangat%20populer%20dikalangan%20masyarakat." style="text-decoration:none; color:blue">Daring</a>. Saya menghabiskan waktu luang yang Saya miliki didalam <a href="https://www.facebook.com" style="text-decoration:none; color:blue">Facebook</a> untuk melihat- lihat meme disana dan Saya menemukan salah satu meme tentang animasi yang berasal dari negara <a href="https://id.m.wikipedia.org/wiki/Jepang" style="text-decoration:none; color:blue">Jepang</a> yang dikenal sebagai <a href="https://id.m.wikipedia.org/wiki/Anime" style="text-decoration:none; color:blue">Anime</a>.
       </p>
-      <img src="thememe.jpeg" style="width:90vw; margin-top:20px">
+      <img src="thememe.jpeg" style="width:90vw; margin-top:20px; text-align:center">
       <p style="font-size:10px; position:relative; bottom:10px; text-align: center"><i>Meme Anime</i></p>
       <p style="font-family:'Linux Libertine'">
         Ternyata judul dari <a href="https://id.m.wikipedia.org/wiki/Anime" style="text-decoration:none; color:blue">Anime</a> tersebut adalah <a href="https://id.m.wikipedia.org/wiki/Your_Name" style="text-decoration:none; color:blue; background-color:yellow">Your Name</a> (Jepang: 君の名は。; Romaji: Kimi no Na wa; harfiah: "Namamu."). Karena mulai tertarik, kemudian mencoba untuk menontonnya di <a href="https://www.youtube.com/" style="text-decoration:none; color:blue">Youtube</a>. Namun setelah setengah perjalanan durasi video, Ternyata Saya salah menonton <a href="https://id.m.wikipedia.org/wiki/Anime" style="text-decoration:none; color:blue">Anime</a>. Yang saat itu ditonton bukanlah <a href="https://id.m.wikipedia.org/wiki/Your_Name" style="text-decoration:none; color:blue; background-color:yellow">Your Name</a>, melainkan <a href="https://id.m.wikipedia.org/wiki/Anime" style="text-decoration:none; color:blue">Anime</a> lain yaitu <a href="https://youtu.be/Ma0NGrFui-M?si=Aj5Y-5dX3t4-lzSb" style="text-decoration:none; color:blue">5 Centimeters Per Second</a>.
       </p>
-      <img src="5cmpersec.jpeg" style="width:90vw; margin-top:20px">
+      <img src="5cmpersec.jpeg" style="width:90vw; margin-top:20px; text-align:center">
       <p style="font-size:10px; position:relative; bottom:10px; text-align:center"><i>5 Centimeters Per Second</i></p>
       <p style="font-family:'Linux Libertine'">
         Karena di <a href="https://www.youtube.com/" style="text-decoration:none; color:blue">Youtube</a> tidak ada, Saya mengunduhnya lewat <a href="https://www.google.com/" style="text-decoration:none; color:blue">Google</a> dan mendapatkannya.
       </p>
-      <img src="yourname.jpeg" style="width:90vw; margin-top:20px">
+      <img src="yourname.jpeg" style="width:90vw; margin-top:20px; text-align:center">
       <p style="font-size:10px; position:relative; bottom:10px; text-align:center"><i>Your Name</i></p>
       <hr>
   </div>
