--- a/history.html
+++ b/history.html
@@ -9,7 +9,7 @@
       border: none;
       background-color: white;
       font-size: 80px;
-      padding-right: 96wv;
+      padding-right: 96vw;
     }
     p{
       font-size: 15px;
