--- a/history.html
+++ b/history.html
@@ -9,6 +9,7 @@
       border: none;
       background-color: white;
       font-size: 80px;
+      padding-top: 5px;
       padding-right: 50vw;
     }
     p{
