--- a/history.html
+++ b/history.html
@@ -6,7 +6,7 @@
   <style>
     button{
       font-family: "Times New Roman";
-      border: none;
+      border: 3px solid;
       background-color: white;
       font-size: 80px;
       padding-top: 0px;
