--- a/history.html
+++ b/history.html
@@ -10,7 +10,7 @@
       background-color: white;
       font-size: 80px;
       padding-top: 0px;
-      padding-right: 50vw;
+      padding-right: 100%;
     }
     p{
       font-size: 15px;
