--- a/history.html
+++ b/history.html
@@ -16,6 +16,9 @@
     #txt1{
       display:none;
     }
+    #txt2{
+      display: none;
+    }
   </style>
 </head>
 <body style="margin:0px">
@@ -88,7 +91,7 @@
         document.getElementById("perubahanButton").innerHTML = "< Perubahan";
       }
     }
-    function c1on(){
+    function c2on(){
       c2 += 1;
       if(c2 > 1){
         c2 = 0;
