--- a/history.html
+++ b/history.html
@@ -101,7 +101,7 @@
         document.getElementById("simbolButton").innerHTML = "> Simbol";
       if(c2 == 1){
         document.getElementById("txt2").style.display = "block";
-        document.getElementById("simbolButton").innerHTML = "< Perubahan";
+        document.getElementById("simbolButton").innerHTML = "< Simbol";
       }
     }
   </script>
