--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
       <a href="history.html" style="text-decoration:none; color:white; font-size:50px">History</a>
     </div>
   </div>
+  <div>
+    <div>
+      <img src="whatsapp.png">
+      <img src="instagram.png">
+    </div>
+  </div>
 </body>
 </html>
