--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div>
     <div>
       <img src="whatsapp.png">
-      <img src="instagram.png">
+      <img src="instagram.png" style="width:100px">
     </div>
   </div>
 </body>
