--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <a href="history.html" style="text-decoration:none; color:white; font-size:50px">History</a>
     </div>
   </div>
-  <div>
+  <div style="background-color:rgb(30,30,30)>
     <div>
       <img src="whatsapp.png">
-      <img src="instagram.png" style="width:110px">
+      <img src="instagram.png">
     </div>
   </div>
 </body>
