--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       <a href="history.html" style="text-decoration:none; color:white; font-size:50px">History</a>
     </div>
   </div>
-  <div style="background-color:rgb(30,30,30)>
+  <div style="background-color:rgb(30,30,30)">
     <div>
+      <h5 style="font-family:'Arial'; color:white">Sosial media:</h5>
       <img src="whatsapp.png">
       <img src="instagram.png">
     </div>
