--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <a href="history.html" style="text-decoration:none; color:white; font-size:50px">History</a>
     </div>
   </div>
-  <div style="background-color:rgb(30,30,30)">
+  <div style="background-color:rgb(30,30,30); display:flex; justify-content:center">
     <div>
-      <h5 style="font-family:'Arial'; color:white">Sosial media:</h5>
+      <h1 style="font-family:'Arial'; color:white">Sosial media:</h1>
       <img src="whatsapp.png">
       <img src="instagram.png">
     </div>
