--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href="history.html" style="text-decoration:none; color:white; font-size:50px">History</a>
     </div>
   </div>
-  <div style="background-color:rgb(30,30,30); display:flex; justify-content:center">
+  <div style="background-color:rgb(30,30,30); display:flex; justify-content:space-between">
     <div>
       <h1 style="font-family:'Arial'; color:white">Sosial media:</h1>
       <img src="whatsapp.png">
