--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
   <div style="background-color:rgb(30,30,30); display:flex; justify-content:space-between">
     <div>
-      <h1 style="font-family:'Arial'; color:white">Sosial media:</h1>
+      <h1 style="font-family:'Arial'; color:white; text-align:center">Sosial media:</h1>
       <img src="whatsapp.png">
       <img src="instagram.png">
     </div>
