--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <a href="history.html" style="text-decoration:none; color:white; font-size:50px">History</a>
     </div>
   </div>
-  <div style="background-color:rgb(30,30,30); display:flex; justify-content:space-between">
-    <div>
+  <div style="background-color:rgb(30,30,30)">
+    <div style="display:flex; justify-content:space-between">
       <h1 style="font-family:'Arial'; color:white; text-align:center">Sosial media:</h1>
       <img src="whatsapp.png">
       <img src="instagram.png">
