--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </div>
   </div>
   <div style="background-color:rgb(30,30,30)">
-    <div style="display:flex; justify-content:space-between">
-      <h1 style="font-family:'Arial'; color:white; text-align:center">Sosial media:</h1>
+    <h1 style="font-family:'Arial'; color:white; text-align:center">Sosial media:</h1>
+    <div style="display:flex; justify-content:space-around">
       <img src="whatsapp.png">
       <img src="instagram.png">
     </div>
