--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
   <div style="background-color:rgb(30,30,30)">
     <h1 style="font-family:'Arial'; color:white; text-align:center">Sosial media:</h1>
-    <div style="display:flex; justify-content:space-around">
+    <div style="text-align:center; margin:5px">
       <img src="whatsapp.png">
       <img src="instagram.png">
     </div>
