--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </div>
   </div>
   <div style="background-color:rgb(30,30,30)">
-    <h1 style="font-family:'Arial'; color:white; text-align:center">Sosial media:</h1>
+    <h1 style="font-family:'Arial'; color:white; text-align:center">Social media:</h1>
     <div style="text-align:center; margin:5px">
-      <img src="whatsapp.png">
-      <img src="instagram.png">
+      <a href="https://wa.me/6283861480445?text=Hello20%there!"><img src="whatsapp.png"></a>
+      <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png"></a>
     </div>
   </div>
 </body>
