--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href="history.html" style="text-decoration:none; color:white; font-size:50px">History</a>
     </div>
   </div>
-  <div style="background-color:rgb(30,30,30)">
+  <div style="background-color:rgb(30,30,30); margin-bottom:0px">
     <h1 style="font-family:'Arial'; color:white; text-align:center">Social media:</h1>
     <div style="text-align:center; margin:5px">
       <a href="https://wa.me/6283861480445?text=Hello%20there!"><img src="whatsapp.png"></a>
