--- a/history.html
+++ b/history.html
@@ -73,6 +73,13 @@
       </p>
     </div>
   </div>
+  <div style="background-color:rgb(30,30,30); position:absolute; bottom: 0px; left:0px">
+    <h1 style="font-family:'Arial'; color:white; text-align:center">Social media:</h1>
+    <div style="text-align:center; margin:5px">
+      <a href="https://wa.me/6283861480445?text=Hello%20there!"><img src="whatsapp.png"></a>
+      <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png"></a>
+    </div>
+  </div>
   <script>
     let c1 = 0;
     let c2 = 0;
