--- a/history.html
+++ b/history.html
@@ -73,7 +73,7 @@
       </p>
     </div>
   </div>
-  <div style="background-color:rgb(30,30,30); position:absolute; bottom: 0px; left:0px">
+  <div style="background-color:rgb(30,30,30); margin-bottom:0px">
     <h1 style="font-family:'Arial'; color:white; text-align:center">Social media:</h1>
     <div style="text-align:center; margin:5px">
       <a href="https://wa.me/6283861480445?text=Hello%20there!"><img src="whatsapp.png"></a>
