--- a/history.html
+++ b/history.html
@@ -73,8 +73,8 @@
       </p>
     </div>
   </div>
-  <div style="background-color:rgb(30,30,30); margin-bottom:0px">
-    <h1 style="font-family:'Arial'; color:white; text-align:center">Social media:</h1>
+  <div style="background-color:rgb(30,30,30)">
+    <p style="font-family:'Arial'; color:white; text-align:center">Social media:</p>
     <div style="text-align:center; margin:5px">
       <a href="https://wa.me/6283861480445?text=Hello%20there!"><img src="whatsapp.png"></a>
       <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png"></a>
