--- a/history.html
+++ b/history.html
@@ -73,7 +73,7 @@
       </p>
     </div>
   </div>
-  <div style="background-color:rgb(30,30,30)">
+  <div style="background-color:rgb(30,30,30); position:relative; top:10px">
     <p style="font-family:'Arial'; color:white; text-align:center">Social media:</p>
     <div style="text-align:center; margin:5px">
       <a href="https://wa.me/6283861480445?text=Hello%20there!"><img src="whatsapp.png"></a>
