--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       <a href="history.html" style="text-decoration:none; color:white; font-size:50px">History</a>
     </div>
   </div>
+  
+  <div>
+    <img src="sky.jpeg">
+  </div>
+  
   <div style="background-color:rgb(30,30,30); position:absolute; bottom: 0px; left:0px">
     <h1 style="font-family:'Arial'; color:white; text-align:center">Social media:</h1>
     <div style="text-align:center; margin:5px">
