--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
   
   <div>
-    <img src="sky.jpeg">
+    <img src="sky.jpeg" style="width:100vw">
   </div>
   
   <div style="background-color:rgb(30,30,30); position:absolute; bottom: 0px; left:0px">
