--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="sky.jpeg" style="width:100vw">
   </div>
   
-  <div style="background-color:rgb(30,30,30); position:absolute; bottom: 0px; left:0px">
+  <div style="background-color:rgb(30,30,30)">
     <h1 style="font-family:'Arial'; color:white; text-align:center">Social media:</h1>
     <div style="text-align:center; margin:5px">
       <a href="https://wa.me/6283861480445?text=Hello%20there!"><img src="whatsapp.png"></a>
