--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Sparkle</title>
 </head>
 <body style="margin:0px">
-  <div style="">
+  <div style="margin-bottom:0px">
     <div style="text-align:center; position:relative; bottom:150px; right:20px; font-size:50px; font-family:'Times New Roman'">
       <h1 style="color: grey"><img src="logo.png" style="height:300px; position:relative; top:150px">Sparkle<br><span style="font-size:30px; position:relative; left:110px; bottom:60px">Berkilau by GilarInc</span></h1>
     </div>
@@ -15,7 +15,7 @@
   </div>
   
   <div>
-    <img src="sky.jpeg" style="width:100vw">
+    <img src="sky.jpeg" style="width:100vw; margin-bottom:0px">
   </div>
   
   <div style="background-color:rgb(30,30,30); position:relative; top:10px">
