--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
   
   <div>
-    <img src="sky.jpeg" style="width:100vw; margin-bottom:0px">
+    <img src="sky.jpeg" style="width:100vw; position:relative; bottom:50px">
   </div>
   
   <div style="background-color:rgb(30,30,30); position:relative; top:10px">
