--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body style="margin:0px">
   <div style="margin-bottom:0px">
     <div style="text-align:center; position:relative; bottom:150px; right:20px; font-size:50px; font-family:'Times New Roman'">
-      <h1 style="color: grey"><img src="logo.png" style="height:300px; position:relative; top:150px">Sparkle<br><span style="font-size:30px; position:relative; left:110px; bottom:60px">Berkilau by GilarInc</span></h1>
+      <h1 style="color: black"><img src="logo.png" style="height:300px; position:relative; top:150px">Sparkle<br><span style="font-size:30px; position:relative; left:110px; bottom:60px">Berkilau by GilarInc</span></h1>
     </div>
     <div style="border:3px solid; padding:20px; display:flex; justify-content:space-around; position:relative; bottom:150px; background-color:rgb(30,30,30)">
       <a href="index.html" style="text-decoration:none; color:white; border-bottom:3px solid; font-size:50px">Home</a>
@@ -18,7 +18,7 @@
     <img src="sky.jpeg" style="width:100vw; position:relative; bottom:150px">
   </div>
   
-  <div style="background-color:black; position:relative; bottom:200px; height:100px">
+  <div style="background-color:black; position:relative; bottom:200px; height:100%">
     <h1 style="font-family:'Arial'; color:white; text-align:center">Social media:</h1>
     <div style="text-align:center; margin:5px">
       <a href="https://wa.me/6283861480445?text=Hello%20there!"><img src="whatsapp.png"></a>
