--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body style="margin:0px">
   <div style="margin-bottom:0px">
     <div style="text-align:center; position:relative; bottom:150px; right:20px; font-size:50px; font-family:'Times New Roman'">
-      <h1 style="color: black"><img src="logo.png" style="height:300px; position:relative; top:150px">Sparkle<br><span style="font-size:30px; position:relative; left:110px; bottom:60px">Berkilau by GilarInc</span></h1>
+      <h1 style="color: grey"><img src="logo.png" style="height:300px; position:relative; top:150px">Sparkle<br><span style="font-size:30px; position:relative; left:110px; bottom:60px">Berkilau by GilarInc</span></h1>
     </div>
-    <div style="border:3px solid; padding:20px; display:flex; justify-content:space-around; position:relative; bottom:150px; background-color:rgb(30,30,30)">
+    <div style="border:3px solid; padding:20px; display:flex; justify-content:space-around; position:relative; bottom:150px; background-color:black">
       <a href="index.html" style="text-decoration:none; color:white; border-bottom:3px solid; font-size:50px">Home</a>
       <a href="history.html" style="text-decoration:none; color:white; font-size:50px">History</a>
     </div>
