--- a/history.html
+++ b/history.html
@@ -26,7 +26,7 @@
     <div style="text-align:center; position:relative; bottom:150px; right:20px; font-size:50px; font-family:'Times New Roman'">
       <h1 style="color: grey"><img src="logo.png" style="height:300px; position:relative; top:150px">Sparkle<br><span style="font-size:8.8px; position:relative; left:110px; bottom:60px">Berkilau by GilarInc</span></h1>
     </div>
-    <div style="border:3px solid; padding:20px; display:flex; justify-content:space-around; position:relative; bottom:150px; background-color:rgb(30,30,30)">
+    <div style="border:3px solid; padding:20px; display:flex; justify-content:space-around; position:relative; bottom:150px; background-color:black">
       <a href="index.html" style="text-decoration:none; color:white; font-size:50px">Home</a>
       <a href="history.html" style="text-decoration:none; color:white; border-bottom:3px solid; font-size:50px">History</a>
     </div>
@@ -74,7 +74,7 @@
       </p>
     </div>
   </div>
-  <div style="background-color:rgb(30,30,30); position:relative; top:10px">
+  <div style="background-color:black; position:relative; top:10px">
     <h6 style="font-family:'Arial'; color:white; text-align:center">Social media:</h6>
     <div style="text-align:center; margin:5px">
       <a href="https://wa.me/6283861480445?text=Hello%20there!"><img src="whatsapp.png"></a>
