--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
       <a href="https://wa.me/6283861480445?text=Hello%20there!"><img src="whatsapp.png"></a>
       <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png"></a>
     </div>
+    <hr style="color:white">
+    <duv>
+      <a>Home</a>
+      <span>|</span>
+      <a>History</a>
+    </duv>
   </div>
 </body>
 </html>
