--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png"></a>
     </div>
     <hr style="color:white">
-    <duv>
+    <div>
       <a>Home</a>
       <span>|</span>
       <a>History</a>
-    </duv>
+    </div>
   </div>
 </body>
 </html>
