--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </div>
     <hr style="color:white">
     <div>
-      <a>Home</a>
+      <a href="index.html">Home</a>
       <span>|</span>
-      <a>History</a>
+      <a href="history.html">History</a>
     </div>
   </div>
 </body>
