--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="sky.jpeg" style="width:100vw; position:relative; bottom:150px">
   </div>
   
-  <div style="background-color:black; position:relative; bottom:200px; height:100%">
+  <div style="background-color:black; position:relative; bottom:200px">
     <h1 style="font-family:'Arial'; color:white; text-align:center">Social media:</h1>
     <div style="text-align:center; margin:5px">
       <a href="https://wa.me/6283861480445?text=Hello%20there!"><img src="whatsapp.png"></a>
