--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </div>
     <hr style="color:white">
     <div>
-      <a href="index.html">Home</a>
-      <span>|</span>
-      <a href="history.html">History</a>
+      <a href="index.html" style="color:white">Home</a>
+      <span style="white">|</span>
+      <a href="history.html" style="white">History</a>
     </div>
   </div>
 </body>
