--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png"></a>
     </div>
     <hr style="color:white">
-    <div>
+    <div style="font-size:20px; display:flex; justify-content:space-around">
       <a href="index.html" style="color:white">Home</a>
       <span style="white">|</span>
-      <a href="history.html" style="white">History</a>
+      <a href="history.html" style="color:white">History</a>
     </div>
   </div>
 </body>
