--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png"></a>
     </div>
     <hr style="color:white">
-    <div style="font-size:20px; display:flex; justify-content:space-around">
+    <div style="font-size:20px; text-align:center; margin:5px">
       <a href="index.html" style="color:white">Home</a>
-      <span style="white">|</span>
+      <span style="color:white">|</span>
       <a href="history.html" style="color:white">History</a>
     </div>
   </div>
