--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png"></a>
     </div>
     <hr style="color:white">
-    <div style="font-family:'Arial'; font-size:50px; text-align:center; margin:5px">
-      <a href="index.html"><h1 style="color:white">Home</h1></a>
+    <div style="font-family:'Arial'; font-size:50px; text-align:center; margin:5px; margin-bottom:10px">
+      <a href="index.html" style="text-decoration:none"><h6 style="color:white">Home</h6></a>
       <span style="color:white">|</span>
-      <a href="history.html"><h1 style="color:white">History</h1></a>
+      <a href="history.html" style="text-decoration:none"><h6 style="color:white">History</h6></a>
     </div>
   </div>
 </body>
