--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png"></a>
     </div>
     <hr style="color:white">
-    <div style="font-family:'Arial'; font-size:50px; text-align:center; margin:5px; margin-bottom:10px">
+    <div style="font-family:'Arial'; font-size:50px; display:flex; text-align:center; margin:5px; margin-bottom:10px">
       <a href="index.html" style="text-decoration:none"><h6 style="color:white">Home</h6></a>
       <span style="color:white">|</span>
       <a href="history.html" style="text-decoration:none"><h6 style="color:white">History</h6></a>
