--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </div>
     <hr style="color:white">
     <div style="font-family:'Arial'; font-size:50px; display:flex; text-align:center; margin:5px; margin-bottom:10px">
-      <a href="index.html" style="text-decoration:none"><h6 style="color:white">Home</h6></a>
+      <a href="index.html" style="text-decoration:none"><span><h6 style="color:white">Home</h6></span></a>
       <span style="color:white">|</span>
-      <a href="history.html" style="text-decoration:none"><h6 style="color:white">History</h6></a>
+      <a href="history.html" style="text-decoration:none"><span><h6 style="color:white">History</h6></span></a>
     </div>
   </div>
 </body>
