--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
     </div>
     <hr style="color:white">
     <div style="font-family:'Arial'; font-size:50px; text-align:center; margin:5px; margin-bottom:10px">
-      <a href="index.html" style="text-decoration:none; margin:5px"><span><h6 style="color:white">Home</h6></span></a>
-      <span style="color:white">|</span>
-      <a href="history.html" style="text-decoration:none"><span><h6 style="color:white">History</h6></span></a>
+      <a href="index.html" style="text-decoration:none">Home</a>
+      <a href="history.html" style="text-decoration:none">History</a>
     </div>
   </div>
 </body>
