--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
     <hr style="color:white">
     <div style="font-family:'Arial'; font-size:50px; text-align:center; margin:5px; margin-bottom:10px">
-      <a href="index.html" style="text-decoration:none">Home</a>
-      <a href="history.html" style="text-decoration:none">History</a>
+      <a href="index.html" style="text-decoration:none; color:white">Home</a>
+      <a href="history.html" style="text-decoration:none; color:white">History</a>
     </div>
   </div>
 </body>
