--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <hr style="color:white">
     <div style="font-family:'Arial'; font-size:50px; text-align:center; margin:5px; margin-bottom:20px">
-      <a href="index.html" style="text-decoration:none; color:white"><h6>Home</h6></a>
+      <a href="index.html" style="text-decoration:none; color:white"><h6><span>Home</span></h6></a>
       <a href="history.html" style="text-decoration:none; color:white">History</a>
     </div>
   </div>
