--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png"></a>
     </div>
     <hr style="color:white">
-    <div style="font-family:'Arial'; font-size:50px; text-align:center; margin:5px; margin-bottom:20px">
-      <a href="index.html" style="text-decoration:none; color:white"><h6><span>Home</span></h6></a>
-      <a href="history.html" style="text-decoration:none; color:white">History</a>
+    <div style="font-size:50px; text-align:center; margin:5px; margin-bottom:20px">
+      <a href="index.html" style="text-decoration:none; color:white; font-family:'Arial'">Home</a>
+      <a href="history.html" style="text-decoration:none; color:white; font-family:'Arial'">History</a>
     </div>
   </div>
 </body>
