--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
     <hr style="color:white">
     <div style="font-size:50px; text-align:center: margin-bottom:20px; display:flex; justify-content:space-around">
-      <a href="index.html" style="text-decoration:none; color:white; font-family:'Arial'">Home</a>
-      <a href="history.html" style="text-decoration:none; color:white; font-family:'Arial'">History</a>
+      <a href="index.html" style="text-decoration:none; color:white; font-family:'Arial'"><h6>Home</h6></a>
+      <a href="history.html" style="text-decoration:none; color:white; font-family:'Arial'"><h6>History</h6></a>
     </div>
   </div>
 </body>
