--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <hr style="color:white">
     <div style="font-size:50px; text-align:center: margin-bottom:20px; display:flex; justify-content:space-around">
       <a href="index.html" style="text-decoration:none; color:white; font-family:'Arial'"><h6>Home</h6></a>
-      <span style="color:white">|</span>
+      <h6 style="color:white">|</h6>
       <a href="history.html" style="text-decoration:none; color:white; font-family:'Arial'"><h6>History</h6></a>
     </div>
   </div>
