--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png"></a>
     </div>
     <hr style="color:white">
-    <div style="font-size:50px; text-align:center: margin-bottom:20px; display:flex; justify-content:space-around">
+    <div style="font-size:50px; text-align:center: margin-bottom:20px; display:flex; justify-content:center">
       <a href="index.html" style="text-decoration:none; color:white; font-family:'Arial'"><h6>Home</h6></a>
       <h6 style="color:white">|</h6>
       <a href="history.html" style="text-decoration:none; color:white; font-family:'Arial'"><h6>History</h6></a>
