--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   </div>
   
   <div style="background-color:black; position:relative; bottom:200px">
-    <h1 style="font-family:'Arial'; color:white; text-align:center">Social media:</h1>
+    <h1 style="font-family:'Arial'; color:white; text-align:center">Contact us:</h1>
     <div style="text-align:center; margin:5px">
-      <a href="https://wa.me/6283861480445?text=Hello%20there!"><img src="whatsapp.png"></a>
+      <!--<a href="https://wa.me/6283861480445?text=Hello%20there!"><img src="whatsapp.png"></a>-->
       <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png"></a>
     </div>
     <hr style="color:white">
