--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1 style="font-family:'Arial'; color:white; text-align:center">Contact us:</h1>
     <div style="text-align:center; margin:5px">
       <!--<a href="https://wa.me/6283861480445?text=Hello%20there!"><img src="whatsapp.png"></a>-->
-      <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png"></a>
+      <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png" style="width:96px"></a>
     </div>
     <hr style="color:white">
     <div style="font-size:50px; text-align:center: margin-bottom:20px; display:flex; justify-content:center">
