--- a/history.html
+++ b/history.html
@@ -78,7 +78,7 @@
     <h6 style="font-family:'Arial'; color:white; text-align:center">Social media:</h6>
     <div style="text-align:center; margin:5px">
       <a href="https://wa.me/6283861480445?text=Hello%20there!"><img src="whatsapp.png"></a>
-      <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png"></a>
+      <a href="https://www.instagram.com/aug_que?igsh=OGQ5ZDc2ODk2ZA=="><img src="instagram.png" style="width:96px"></a>
     </div>
   </div>
   <script>
