--- a/history.html
+++ b/history.html
@@ -53,8 +53,8 @@
       <p style="font-size:10px; position:relative; bottom:10px; text-align:center"><i>5 Centimeters Per Second</i></p>
       <br><br>
       <p style="font-family:'Linux Libertine'">
-        Karena di <a href="https://www.youtube.com/" style="text-decoration:none; color:blue">Youtube</a> tidak ada, Saya mengunduhnya lewat <a href="https://www.google.com/" style="text-decoration:none; color:blue">Google</a> dan mendapatkannya.
-      </p>
+        <!--Karena di <a href="https://www.youtube.com/" style="text-decoration:none; color:blue">Youtube</a> tidak ada, Saya mengunduhnya lewat <a href="https://www.google.com/" style="text-decoration:none; color:blue">Google</a> dan mendapatkannya.
+      --></p>
       <img src="yourname.jpeg" style="width:96vw; margin-top:20px; text-align:center">
       <p style="font-size:10px; position:relative; bottom:10px; text-align:center"><i>Your Name</i></p>
       <hr><br><br>
