--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
   <canvas id="gameScreen"></canvas>
   
-  <script src="index.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
